feat: support hessian packer (#36)